package org.flexlb.constant;

public class CommonConstants {

    public static final String DASHSCOPE_AK = "dashscope_ak";

    public static final long DIAMOND_GET_DATA_TIMEOUT = 3 * 1000;

    public static final String WHALE_GROUP = "WHALE_GROUP";

    public static final String PRIVATE_REQUEST = "private_request";

    public static final String IMAGE_SPACE_TRANSITION = "image_space_transition";

    public static final String IMAGE_URL_PREFIX_REPLACE = "image_url_prefix_replace";

    public static final String OLD_IMAGE_URLS = "old_image_urls";

    public static final String SPECIFIED_IP_PORT = "specified_ip_port";

    public static final String CLOSE_GREEN_CHECK = "close_green_check";

    public static final String REQUEST_PRIORITY = "request_priority";

    public static final String SSE_ERROR_PREFIX = "data:[error]";

    public static final String DONE_INFO = "[done]";

    public static final String OPENAI_DONE_INFO = "[DONE]";

    public static final String FUNCTION = "aigc.text-generation.generation";

    public static final String CHAT_ID = "chat_id";

    public static final String INPUT_LEN = "input_len";

    public static final String OUTPUT_LEN = "output_len";

    public static final String DEBUG_INFO = "debug_info";

    public static final String DASH_SCOPE_PREFIX = "DashScope_";

    public static final String RESULT_FORMAT = "result_format";

    public static final String SOURCE = "source";

    public static final String WHALE = "whale";

    public static final String DEBUG = "debug";

    public static final String TBSTARS = "tbstars";

    public static final String TRACE_ID = "traceId";

    public static final String REQUEST_ID = "requestId";

    public static final String MODEL_NAME = "modelName";

    public static final String PROTOCOL = "protocol";

    public static final String ORIGIN_TRACE_ID = "originTraceId";

    public static final String PROMPT = "prompt";

    public static final String GENERATE_CONFIG = "generateConfig";

    public static final String STREAMING_MODE = "stream";

    public static final String FUNCTIONS = "functions";

    public static final String EXTEND_FIELDS = "extendFields";

    public static final String START = "start";

    public static final String API_KEY_ID = "apiKeyId";

    public static final String INPUT = "input";

    public static final String MEDIA_LIST = "mediaList";

    public static final String CONFLICT_RETRY = "conflict_retry";

    public static final String CONNECT_RETRY = "connect_retry";

    public static final String DISCONNECT_RETRY = "disconnect_retry";

    public static final String FIRST_RT = "firstRt";

    public static final String TOTAL_RT = "totalRt";

    public static final String ENGINE_IP = "engineIP";

    public static final String WAREHOUSE_PREFER = "warehouse_prefer";

    public static final String REASONING_IN_CONTENT = "reasoning_in_content";

    public static final String USER_CUSTOM_PRIORITY = "userCustomPriority";

    public static final String CONFLICT_EXP_NUM = "conflictExpNum";

    public static final String CONFLICT_EXP_PERCENT = "conflictExpPercent";

    public static String OFFLINE_HYPER_PREFIX = "hyperinference_";

    public static String OFFLINE_NARWHAL_PREFIX = "narwhal_";

    public static String IDEA_LAB_PREFIX = "IdeaLAB_";

    public static final String CHANNEL_TASK_CONTEXT = "taskCtx";

    public static final String CHANNEL_HAND_SHAKER = "handShaker";

    public static final String CHANNEL_HAND_SHAKER_PROMISE = "handShakerPromise";

    public static String DEFAULT_VALUE = "-";

    public static String AGGREGATOR = "aggregator";

    public static String CODEC = "codec";

    public static String TIMEOUT_HANDLER = "timeoutHandler";

    public static String WHALE_ONLINE = "whale-online";

    public static String WHALE_OFFLINE = "whale-offline";

    public static String WHALE_STRESS = "whale-stress";

    public static String WHALE_MIX_ONLINE = "whale-mix-online";

    public static String OFFLINE = "offline";

    public static String YACE = "yace";

    public static String FRAMEWORK = "framework";

    public static String MESSAGE_CONTENT_TYPE = "type";

    /**
     * gRPC 超时的 message
     */
    public static final String DEADLINE_EXCEEDED_MESSAGE = "DEADLINE_EXCEEDED";

}